--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,14 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="./manifest.json" />
+    <script
+      type="text/javascript"
+      src="https://bokim1004.github.io/static/js/main.e4593f69.js"
+    />
+    <link
+      rel="stylesheet"
+      href="https://bokim1004.github.io/static/css/main.e6c13ad2.css"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
